dropdown menu issue

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8068,15 +8068,21 @@ thead tr th .form-control {
       height: 100%; }
       .top-menu ul li:hover .header-submenu li {
         width: 130px;
-        line-height: 18px; }
-        .top-menu ul li:hover .header-submenu li a {
+        line-height: 16px; }
+        .top-menu ul li:hover .header-submenu li a,
+        .top-menu ul li:hover .header-submenu li div {
           background: white;
           width: 100%;
           padding: 20px; }
-          .top-menu ul li:hover .header-submenu li a:hover {
+          .top-menu ul li:hover .header-submenu li a:hover,
+          .top-menu ul li:hover .header-submenu li div:hover {
             background: #e3e4e8;
             color: black;
             cursor: pointer; }
+        .top-menu ul li:hover .header-submenu li:hover {
+          background: #e3e4e8;
+          color: black;
+          cursor: pointer; }
 
 .bg {
   background-color: #d6d6d6; }
@@ -8658,205 +8664,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #8d9933; }
+  background: #e5500b; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #96f925; }
+  background: #be4c7c; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #c2eb95; }
+  background: #39bb2d; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #30d561; }
+  background: #73b4c3; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #6a7664; }
+  background: #1c6605; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #6d36f8; }
+  background: #12eb04; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #662bbf; }
+  background: #551350; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #87a595; }
+  background: #8de5c8; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #d1e36d; }
+  background: #df0d2f; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #e4a497; }
+  background: #661510; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #e7706b; }
+  background: #36441d; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #e4acab; }
+  background: #c60e6e; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #1d5fab; }
+  background: #22b28c; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #1aef3d; }
+  background: #663329; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #2efe6b; }
+  background: #d074c8; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #79a44a; }
+  background: #ea51eb; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #c676ff; }
+  background: #8ef375; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #51a073; }
+  background: #b1bff3; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #79bdc5; }
+  background: #74657d; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #170b3e; }
+  background: #16dc63; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #91e828; }
+  background: #c5b933; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #3d7448; }
+  background: #3dc259; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #13ba36; }
+  background: #8424b5; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #5d4844; }
+  background: #7d37da; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #1125a7; }
+  background: #90f571; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #451888; }
+  background: #5f961d; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #3a3ff7; }
+  background: #380b27; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #8b0434; }
+  background: #1fb7d3; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #efbdd7; }
+  background: #35f4d3; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #758be3; }
+  background: #b2a8bc; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #687485; }
+  background: #72406e; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #e17770; }
+  background: #095fe9; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #2c8a29; }
+  background: #032584; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #5f9a1b; }
+  background: #1027e8; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #27ca14; }
+  background: #d68858; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #2626a3; }
+  background: #d773bb; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #d4860f; }
+  background: #7c8cf7; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #c3157b; }
+  background: #af7049; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #a9341e; }
+  background: #ca6a3f; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #fbadd4; }
+  background: #c092d5; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #2b0b4c; }
+  background: #246729; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #2392f0; }
+  background: #f82aa8; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #a1c532; }
+  background: #35c336; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #b34287; }
+  background: #cef6fa; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #3be6dc; }
+  background: #379c05; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #b1568f; }
+  background: #dc6e34; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #a172c5; }
+  background: #c4b675; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #8d235d; }
+  background: #04a7e1; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #cf2e2c; }
+  background: #aeb904; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #732293; }
+  background: #b960d6; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #154987; }
+  background: #383199; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #de652c; }
+  background: #aa01da; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #4c6141; }
+  background: #946390; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #91ec2e; }
+  background: #62d0b1; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #f8576b; }
+  background: #236b68; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #6c200d; }
+  background: #431852; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #065299; }
+  background: #19997f; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #775b7a; }
+  background: #dfa443; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #c8db24; }
+  background: #7e8291; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #57b973; }
+  background: #a5e5e4; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #457129; }
+  background: #1594e6; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #901aea; }
+  background: #8b4dfe; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #ec53b3; }
+  background: #651bf3; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #2d94f4; }
+  background: #1f27c6; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #72bdea; }
+  background: #7ab651; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #9ef1d6; }
+  background: #436a87; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #4b3a11; }
+  background: #c3b7ba; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #a49883; }
+  background: #332ff0; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #b1afdf; }
+  background: #6e516f; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #851fda; }
+  background: #a4d945; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #0ae91c; }
+  background: #5e3c8b; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #553db2; }
+  background: #564dd6; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #d46c95; }
+  background: #33097e; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #df46c4; }
+  background: #31cd8c; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #8e1054; }
+  background: #965dea; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #e0cce3; }
+  background: #5dd819; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #c7a8bf; }
+  background: #0c781c; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #d2f5f8; }
+  background: #771779; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #45d359; }
+  background: #6ee09a; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #b39a61; }
+  background: #d17b8c; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #bb373c; }
+  background: #49a420; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #6bb07b; }
+  background: #0d5b31; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #c7a9ab; }
+  background: #04a643; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #9412a0; }
+  background: #cb8856; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #b518d9; }
+  background: #2def62; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #998504; }
+  background: #4694b3; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #ffadf4; }
+  background: #2ac438; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #66c105; }
+  background: #bbd2d0; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #c8cc19; }
+  background: #9a77d5; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #af4263; }
+  background: #1eb1b3; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #c82207; }
+  background: #7f159e; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #82e090; }
+  background: #d0dd0b; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #24181d; }
+  background: #7edd72; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #18bf8a; }
+  background: #0ddd25; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #85dce8; }
+  background: #6c188c; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #97e3fc; }
+  background: #a3bc3f; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #6472a6; }
+  background: #9fe155; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #b32443; }
+  background: #4e7c15; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #dd907a; }
+  background: #e2a1dc; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #a0a489; }
+  background: #50cbd1; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
