--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -680,9 +680,10 @@ thead tr th {
 
       li {
         width: 130px;
-        line-height: 18px;
+        line-height: 16px;
 
-        a {
+        a,
+        div {
           background: white;
           width: 100%;
           padding: 20px;
@@ -692,6 +693,12 @@ thead tr th {
             color: black;
             cursor: pointer;
           }
+        }
+
+        &:hover {
+          background: #e3e4e8;
+          color: black;
+          cursor: pointer;
         }
       }
     }
