--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8056,7 +8056,7 @@ thead tr th .form-control {
     .top-menu ul li .header-submenu {
       display: none;
       position: absolute;
-      top: 52px;
+      top: 48px;
       left: 10px; }
     .top-menu ul li:hover .header-submenu {
       display: block;
@@ -8664,205 +8664,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #e5500b; }
+  background: #73c7ba; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #be4c7c; }
+  background: #641520; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #39bb2d; }
+  background: #da0e9c; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #73b4c3; }
+  background: #eb5e73; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #1c6605; }
+  background: #b8b402; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #12eb04; }
+  background: #ab7c1d; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #551350; }
+  background: #af5f0b; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #8de5c8; }
+  background: #1d9fae; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #df0d2f; }
+  background: #b4eeaa; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #661510; }
+  background: #dcc2df; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #36441d; }
+  background: #9aa022; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #c60e6e; }
+  background: #f40966; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #22b28c; }
+  background: #13c6d8; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #663329; }
+  background: #e28fab; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #d074c8; }
+  background: #171348; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #ea51eb; }
+  background: #cbedbb; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #8ef375; }
+  background: #a0dfbd; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #b1bff3; }
+  background: #d8a08f; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #74657d; }
+  background: #98f090; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #16dc63; }
+  background: #ffe7f3; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #c5b933; }
+  background: #dbd93c; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #3dc259; }
+  background: #1ed7c2; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #8424b5; }
+  background: #01089b; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #7d37da; }
+  background: #0893b4; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #90f571; }
+  background: #d8c8dd; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #5f961d; }
+  background: #9fa398; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #380b27; }
+  background: #fb2b65; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #1fb7d3; }
+  background: #f99863; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #35f4d3; }
+  background: #3619f2; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #b2a8bc; }
+  background: #3aeb2c; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #72406e; }
+  background: #18fc2d; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #095fe9; }
+  background: #5db024; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #032584; }
+  background: #6eddd5; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #1027e8; }
+  background: #96e403; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #d68858; }
+  background: #f314fe; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #d773bb; }
+  background: #268b85; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #7c8cf7; }
+  background: #808ebb; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #af7049; }
+  background: #8c9093; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #ca6a3f; }
+  background: #c945a0; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #c092d5; }
+  background: #64b29d; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #246729; }
+  background: #77c68f; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #f82aa8; }
+  background: #16c34a; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #35c336; }
+  background: #2a0ac8; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #cef6fa; }
+  background: #1282cb; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #379c05; }
+  background: #76654c; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #dc6e34; }
+  background: #6e0108; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #c4b675; }
+  background: #4b4aec; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #04a7e1; }
+  background: #80e2c9; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #aeb904; }
+  background: #0f1728; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #b960d6; }
+  background: #28cb52; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #383199; }
+  background: #073ed1; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #aa01da; }
+  background: #be2bea; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #946390; }
+  background: #526732; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #62d0b1; }
+  background: #b01314; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #236b68; }
+  background: #dd61a6; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #431852; }
+  background: #1b593a; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #19997f; }
+  background: #05b8dc; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #dfa443; }
+  background: #4c8f7d; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #7e8291; }
+  background: #b69d1c; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #a5e5e4; }
+  background: #2cae6c; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #1594e6; }
+  background: #46c74e; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #8b4dfe; }
+  background: #54dde8; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #651bf3; }
+  background: #07d628; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #1f27c6; }
+  background: #d48ca0; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #7ab651; }
+  background: #66c159; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #436a87; }
+  background: #d655d8; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #c3b7ba; }
+  background: #537106; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #332ff0; }
+  background: #075a96; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #6e516f; }
+  background: #f7304d; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #a4d945; }
+  background: #44eeed; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #5e3c8b; }
+  background: #02a1c9; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #564dd6; }
+  background: #ea19d7; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #33097e; }
+  background: #85247c; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #31cd8c; }
+  background: #fd7796; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #965dea; }
+  background: #63698b; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #5dd819; }
+  background: #55eff8; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #0c781c; }
+  background: #053d96; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #771779; }
+  background: #49eaa9; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #6ee09a; }
+  background: #af544b; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #d17b8c; }
+  background: #ca1c12; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #49a420; }
+  background: #e64d6d; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #0d5b31; }
+  background: #1bb24e; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #04a643; }
+  background: #e65be4; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #cb8856; }
+  background: #dfd7d9; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #2def62; }
+  background: #22cbf2; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #4694b3; }
+  background: #070eef; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #2ac438; }
+  background: #a127ca; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #bbd2d0; }
+  background: #f895ed; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #9a77d5; }
+  background: #184796; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #1eb1b3; }
+  background: #7b5b53; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #7f159e; }
+  background: #a90251; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #d0dd0b; }
+  background: #f75ce5; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #7edd72; }
+  background: #27cd3c; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #0ddd25; }
+  background: #a2a7d8; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #6c188c; }
+  background: #0a49b0; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #a3bc3f; }
+  background: #bab3db; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #9fe155; }
+  background: #e1cfe5; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #4e7c15; }
+  background: #25fc9e; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #e2a1dc; }
+  background: #98accd; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #50cbd1; }
+  background: #6c6cc7; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
